--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     margin: auto;
 }
 
-.currency-container {
+.currency-container, .producers-container {
     display: flex;
     justify-content: space-between;
 }
@@ -27,4 +27,9 @@
     border:  1px solid black;
     width: 300px;
     height: 120px;
+    text-align: center;
+}
+
+.generator-cost{
+    display: block;
 }
