--- a/polynomial_incremental/src/assets/main.css
+++ b/polynomial_incremental/src/assets/main.css
@@ -1,18 +1,18 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+/*  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-
+  padding: 2rem;*/
+  font-family: 'Courier New', Courier, monospace;
   font-weight: normal;
 }
 
 a,
 .green {
-  text-decoration: none;
+/*  text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+  transition: 0.4s;*/
 }
 
 @media (hover: hover) {
@@ -23,8 +23,8 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
-    place-items: center;
+/*    display: flex;
+    place-items: center;*/
   }
 
   #app {
